--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
     line-height: 1.5em;
 }
 
-.slicknav_menu {
+/* .slicknav_menu {
     background: #26262600;
     font-size: 16px;
     display: none;
@@ -92,4 +92,17 @@ ul.slicknav_menu {
     top: 0; 
     content: "";
     margin-left: -100px;
+    font-size: 30px;
+    padding-top: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#about {
+    text-align: center;
+    font-size: 16px;
+    background: #c92476;
+}
+
+#announcements {
+    background: green;
+} */
