--- a/styles.css
+++ b/styles.css
@@ -3,106 +3,11 @@
 body{
     background: url(pictureicon-textures-patterns-gradients-3-small.png);
     font-family: 'Oswald', sans-serif;
-    font-size: 15px;
-    font-weight: 400;
+    font-size: 20px;
     line-height: 1.5em;
 }
 
-/* .slicknav_menu {
-    background: #26262600;
-    font-size: 16px;
-    display: none;
-} 
-
-@media only screen and (min-width: 200px) and (max-width: 1172px) {
-    .slicknav_menu {
-        display: block;
-    }
-    .inner_main_menu {
-        display: none;
-    }
-}
-
-ul.slicknav_menu {
-    background-color: #262626;
-    top: 0;
-    position: absolute;
-    width: 80%;
-   
-}
-
-.inner_main_menu {
-    margin: 0 auto; 
-    width: 1170px;
-}
-
-.inner_main_menu ul{
-    margin: 0; 
-    padding: 0;
-    padding-top: 25px;
-    list-style: none;
+.navbar-nav {
     text-align: right;
 }
 
-.inner_main_menu ul li{
-    float: none; 
-    display: inline-block;
-}
-
-.inner_main_menu ul li:nth-child(1) {
-    float: left;
-}
-
-.inner_main_menu ul li:nth-child(2) {
-    float: left;
-}
-
-.inner_main_menu ul li:nth-child(3) {
-    float: left;
-}
-
-.inner_main_menu ul li a {
-    color: #262626; 
-    font-size: 20px; 
-    text-transform: uppercase; 
-    text-decoration: none; 
-    display: block; 
-    padding: 10px 20px;
-}
-
-.inner_main_menu ul li a:hover {
-    color: #c92476;
-    background: #262626;
-}
-
-#main_menu {
-    width: 100%; 
-    position: relative;
-    /* background: rgba(8, 0, 0, 0.404); */
-    padding-top: 0;
-    padding: 0;
-    margin-top: 0;
-}
-
-.logo-area {
-    width: 600px;
-    height: 600px; 
-    position: absolute; 
-    left: 50%; 
-    top: 0; 
-    content: "";
-    margin-left: -100px;
-    font-size: 30px;
-    padding-top: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#about {
-    text-align: center;
-    font-size: 16px;
-    background: #c92476;
-}
-
-#announcements {
-    background: green;
-} */
