--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,10 @@ body{
 }
 
 .navbar-nav > .active > a {
-    background-color: rgb(129, 178, 241);
+    color: rgb(245, 90, 232) !important;
 }
 
 .nav-item > a:hover {
-    color: red !important;
+    color: rgb(245, 90, 232) !important;
 }
 
