--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
-@import url(https://fonts.googleapis.com/css?family=Fugaz+One|PT+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Raleway&display=swap);
 
 body{
-    background: url(pictureicon-textures-patterns-gradients-3-small.png);
-    font-family: 'PT Sans', sans-serif;
-    font-size: 20px;
+    /*background: url(pictureicon-textures-patterns-gradients-3-small.png);*/
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
     line-height: 1.5em;
 }
 
-.navbar-nav > li {
+.navbar-nav > .nav-item {
+    color: blue;
+}
+
+.navbar {
+    background-color: rgb(22, 7, 22);
+}
+
+/* .navbar-nav > li {
     padding-left: 20px;
     padding-right: 20px;
     text-decoration: blueviolet;
 }
 
-.navbar {
-    background-color: rgba(0, 0, 0, 0.616) !important;
-}
-
 .navbar-brand {
-    color: rgb(129, 178, 241) !important;
-    font-family: 'Fugaz One', cursive; 
-    font-size: 26px;
+    font-family: 'Raleway', cursive; 
+    font-size: 20px;
 }
 
-.navbar-nav li a {
-    color: white !important;
-}
 
 .navbar-nav > .active > a {
     color: rgb(245, 90, 232) !important;
@@ -37,5 +37,5 @@ body{
 
 .navbar-toggler {
     background-color: rgb(129, 178, 241) !important;
-}
+} */
 
