--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,13 @@ nav {
     font-family: 'Oswald', sans-serif;
     font-size: 40px;
 }
+
+#info {
+    background: rgb(156, 35, 120);
+    color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    /* how to get member info and announcements to go vertically when on mobile?*/
+}
