--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,23 @@ nav {
 }
 
 #info {
-    background: rgb(156, 35, 120);
+    background: rgba(0, 0, 0, 0.568);
     color: white;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
+}
+
+#about {
+    background: rgba(0, 0, 0, 0.568);
+    color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
