new background example and copyright added

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap);
 
 body{
-    background: url(pictureicon-textures-patterns-gradients-3-small.png);
+    background: url(ex3.jpg);
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     line-height: 1.5em;
@@ -9,7 +9,7 @@ body{
 }
 
 nav {
-    background: gray;
+    background: transparent;
     /* margin-right: 50px;
     margin-top: 15px; */
 }
@@ -33,8 +33,8 @@ nav {
     color: #60c0dd;
 }
 
-.navbar-light .navbar-nav .nav-item a:active {
-    color: black;
+.navbar-light .navbar-nav .active {
+    color: yellow;
 }
 
 .navbar-toggler {
@@ -43,7 +43,7 @@ nav {
 
 .jumbotron {
     background: rgba(0,0,0,0);
-    color: black;
+    color: white;
     font-family: 'Oswald', sans-serif;
     font-size: 40px;
 }
@@ -64,8 +64,13 @@ nav {
     padding-bottom: 25px;
 }
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
+#recitalvideo {
+    color: white;
+}
+
+#copyright {
+    color: rgb(153, 149, 149);
+    background: #000000;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
