--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap);
 
-body{
-    background: url(ex3.jpg);
+body {
+    background: url(ex3.jpg) no-repeat center center fixed;
+    background-size: cover; 
+
+
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     line-height: 1.5em;
-    background-size: auto;
 }
 
 nav {
