--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald|Raleway&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Lexend+Exa|Raleway|Muli&display=swap);
 
 body {
     background: url(ex3.jpg) no-repeat center center fixed;
@@ -46,33 +46,39 @@ nav {
 .jumbotron {
     background: rgba(0,0,0,0);
     color: white;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
     font-size: 40px;
 }
 
 #info {
     background: rgba(0, 0, 0, 0.568);
-    color: white;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
 }
 
-#about {
-    background: rgba(0, 0, 0, 0.568);
-    color: white;
-    padding-top: 25px;
-    padding-bottom: 25px;
+#aboutus {
+    color: rgb(240, 183, 183);
+}
+
+#memberinfo {
+    color: rgb(237, 155, 245);
+}
+
+#announcements {
+    color: rgb(240, 183, 183);
 }
 
 #recitalvideo {
     color: white;
+    background: rgba(0, 0, 0, 0.568);
 }
 
 #copyright {
     color: rgb(153, 149, 149);
     background: #000000;
+    font-family: 'Muli', sans-serif;
     padding-top: 25px;
     padding-bottom: 25px;
 }
