--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ body {
     color: #F4799E;
 }
 
-.navbar-toggler {
-    background: #bd20bd;
+.navbar-toggler-icon {
+    border-block-color: #bd20bd;
 }
 
 .jumbotron {
