--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,13 @@ footer {
 .container-fluid {
     margin: 0;
 }
+
+#class-desc-box {
+    display: inline-block;
+    text-align: left;
+    font-family: 'Lexend Exa', sans-serif;
+    color: #ffffff;
+    font-size: 22px;
+    background: #000000a2;
+    /* width: 30%; */
+}
