--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lexend+Exa|Raleway|Muli&display=swap);
 
 body {
-    background: url(ex3.jpg) no-repeat center center fixed;
+    background: url(images/ex3.jpg) no-repeat center center fixed;
     background-size: cover; 
 
     font-family: 'Raleway', sans-serif;
@@ -217,24 +217,19 @@ footer {
 
 form {
     margin-top: 50px;
-    transition: all 4s ease-in-out;
     align-content: center;
     color: #ffffff;
-    background: #000000c4
+    background: #000000c4;
+    height: 100%
 }
-/* 
-.contact-form {
-    
-
-} */
 
 .form-control {
-    width: 600px;
+    width: 550px;
     background: transparent;
     border: none;
     outline: none;
-    border-bottom: 1px solid gray;
-    color: #ffffff;
+    border-bottom: 2px solid white;
+    /* color: #ffffff; */
     font-size: 18px;
     margin-bottom: 16px;
 }
@@ -244,9 +239,9 @@ input {
 }
 
 form .submit {
-    background: green;
+    background: #bd20bd;
     border-color: transparent;
-    color: red;
+    color: #ffffff;
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 2px;
@@ -255,6 +250,15 @@ form .submit {
 }
 
 form .submit:hover {
-    background-color: aqua;
+    background-color: #e657e6;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 575px) {
+    form .submit {
+        width: 300px;
+    }
+    .form-control {
+        width: 400px;
+    }
 }
