--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,17 @@ body {
     padding-bottom: 25px;
 }
 
+@media only screen and (max-width: 736px) {
+    #info {
+        background: #000000de;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        text-align: center;
+    }
+}
+
 #aboutus, #announcements {
     color: #ca41ca;
 }
