--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,7 @@ footer {
 #desc_text {
     font-size: 13px;
     line-height: 1.2;
+    text-align: justify;
 }
 
 @media only screen and (max-width: 991px) {
