--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lexend+Exa|Raleway|Muli&display=swap);
 
 body {
-    background: url(images/ex3.jpg) no-repeat center center fixed;
+    background: url(images/1.jpg) no-repeat center center fixed;
     background-size: cover; 
 
     font-family: 'Raleway', sans-serif;
