--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,10 @@ body {
     border-color: rgb(202, 65, 202);
 }
 
-.jumbotron {
-    background: #00000000;
+.carousel-caption {
+    top: 75px;
+    bottom: auto;
+    position: absolute;
     color: #ffffff;
     font-family: 'Lexend Exa', sans-serif;
     font-size: 40px;
@@ -67,7 +69,7 @@ body {
 }
 
 @media only screen and (max-width: 774px) {
-    .jumbotron {
+    .carousel-caption {
         display: none;
     }
     #instr-empty-space {
