Added color to the words beginner/intermediate/advanced to put more emphasis on them

--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,11 @@ footer {
     text-align: justify;
 }
 
+#beg-adv {
+    color: #db6cdb;
+    display: inline;
+}
+
 @media only screen and (max-width: 991px) {
     #navbar {
         background: #2b2a2a;
