Updated the contact us page to not have the contact form

--- a/styles.css
+++ b/styles.css
@@ -256,11 +256,14 @@ footer {
 
 #questions {
     color: #ffffff;
+    background: #000000ab;
     font-family: 'Lexend Exa', sans-serif;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
-form {
+/* form {
     margin-top: 50px;
     align-content: center;
     color: #ffffff;
@@ -305,9 +308,4 @@ form .submit:hover {
     .form-control {
         width: 400px;
     }
-}
-
-#myModal {
-    display: block;
-    padding-top: 100px;
-}
+} */
