Embedded the google calendar and added a link to it

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,10 @@ body {
     background: #000000b6;
 }
 
+#calendar {
+    color: #ffffff;
+}
+
 footer {
     color: #999595;
     background: #000000;
