--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    color: rgb(240, 194, 241);
+}
+a:hover {
+    color: rgb(238, 138, 240);
+}
+
 #navbar {
     background: transparent;
     overflow: hidden;
