--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ a:hover {
 
 #memberinfo, #announcements {
     color: #ca41ca;
-    text-align: justify;
+    text-align: left;
 }
 
 #aboutus {
